# 3DPartClassification

./: .gitignore  DTVmodel.py  DevNote.md  License.txt  Readme.md  compressImage.py  cppyy_numpy_buffer_cffi.py  dataCollector.py  dataGenerator.py  dataPreprocess.py  dataSummary.py  detectFreeCAD.py  detect_freecad.py  fcMeshPreprocessor.py  fclib_dataSummary.py  fclib_parameters.py  fclib_preprocess.py  global_config.py  imagePreprocess.py  input_parameters.py  kicad_parameters.py  partClassify.py  partConverter.py  plotImageMatrix.py  plotModel.py  requirements.txt  stratify.py  tf_model.py  thingi10k_parameters.py
KiCAD_dataset/: KiCAD18category_train_history_Nov06_2022.txt  KiCAD_dataset.md  KiCAD_summary.py  KiCAD_train_history_Nov05_2022.txt  KiCAD_train_history_Nov05_2022_300_400.txt
Thingi10K_download/: Thingi10K_dataset.md  Thingi10K_download.py  Thingi10K_download_metadata.py  file_ids_list.py
compressImage/: Readme_compression.md  compressBlock.cpp  compressImage.py  compressVoxel.py
data/: processed_3view_KiCAD_lib_metadata.json  processed_cubebox_3view_ModelNet10_metadata.json  processed_nview_FreeCAD_lib_metadata.json
data/FreeCAD_lib/: processed_3view_FreeCAD_lib_metadata.json  processed_cubebox_3view_FreeCAD_lib_imagedata_train_history.txt
data/KiCAD_lib/: processed_3view_KiCAD_lib_metadata_14category.json
data/ModelNet10/: 6views_DT_cubebox_mixedinput_ModelNet10_feb12.h5.json
data/ModelNet40/: processed_cubebox_3view_ModelNet40_metadata.json
docs/: Accuracy.md
occProjector/: .gitignore  CMakeLists.txt  README.md  geometryProperty.cpp  occProjector.cpp  occ_inscribe.cpp  occ_inscribe.h  occ_project.h  plotViews.py  plot_views.py
paper_part_recognition/: DRAFT CAD 3D geometry classification and recogntion by machine learning.md  Journals for Artificial Intelligence for Engineering Design.docx  Source code for CNN for 3D shape classification.md  literature 3D object recognition.md
tranceparts_download/: traceparts_category.txt  traceparts_interactive.py  traceparts_parameters.py  traceparts_webscrape.py
voxnet_tf2_keras/: lib_IO_hdf5.py  model_keras.py  readme.txt  recognizer_voxnet.py  run_voxnet_keras.py
voxnet_tf2_keras/config/: model_cfg.py
